infrastructure/kubernetes/overlays/preprod/platform/http-route-trino.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trino
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - trino.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: trino
          port: 8080
